# solid-client-credentials-py

./: .appveyor.yml  .pylint.ini  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: main.yml
docs/: requirements.txt
docs/about/: acknowledgements.md
solid_client_credentials/: __init__.py  __main__.py  access_token.py  dpop_token_provider.py  dpop_utils.py  openid_config.py  solid_client_credentials_auth.py
solid_client_credentials/tests/: test_dpop_utils.py  test_utils.py
tests/: conftest.py  css_utils.py  docker-compose.yml  test_auth.py  test_cli.py
