[tool.poetry]

name = "SolidClientCredentials"
version = "1.0.1"
description = "Solid authentication with client credentials"

packages = [{ include = "solid_client_credentials" }]

license = "MIT"
authors = ["A_A <21040751+Otto-AA@users.noreply.github.com>"]

readme = "README.md"
homepage = "https://pypi.org/project/SolidClientCredentials"
documentation = "https://SolidClientCredentials.readthedocs.io"
repository = "https://github.com/Otto-AA/solid-client-credentials-py"

keywords = [
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]

python = "^3.10"

types-requests = "^2.28.11.13"
jwcrypto = "^1.4.2"
pyjwt = "^2.6.0"

[tool.poetry.group.dev.dependencies]

# Formatters
black = "^22.1"
tomli = "*" # missing 'black' dependency
isort = "^5.10"

# Linters
mypy = "^1.0"
pydocstyle = "^6.1"
pylint = "~2.15"
wrapt = "*" # missing 'pylint' dependency

# Testing
pytest = "^7.1"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-random = "*"
pytest-cov = "^3.0"
pytest-mock = "^3.10.0"
pytest-docker = "^3.1.1"
freezegun = "*"

# Reports
coveragespace = "^6.0"

# Documentation
pygments = "^2.11.1"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

mkdocs = ">=1.4.2"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
